Fix html truncation and padding on links

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,8 +60,12 @@ div.post_body {
   border-top: dotted 1px #D9D9D9;
 }
 
+.header a {
+  padding: 15px 8px 17px 5px;
+}
+
 a {
-  padding: 5px 8px 5px 5px;
+  padding: 2px 2px 2px 2px;
   color: #000;
   &:visited {
     color: #666;
